<resources>
    <string name="app_name">QR System</string>
    <string name="Welcome_Text">Welcome</string>
    <string name="Scan_error_bt">Retry Scan</string>
    <string name="registerInfoText">Enter your details to register</string>
    <string name="registerInfoText2">Enter User details to register</string>
    <string name="fNameText">Enter your first name</string>
    <string name="fNameText2">Enter User first name</string>
    <string name="fNameLabel">First Name:</string>
    <string name="sNameText">Enter your surname</string>
    <string name="sNameText2">Enter User surname</string>
    <string name="userid_text">Enter User-ID</string>
    <string name="userid_label">User-ID:</string>
    <string name="sNameLabel">Surname:</string>
    <string name="ageText">Enter you age</string>
    <string name="usernameText">Create your username</string>
    <string name="usernameLabel">Username:</string>
    <string name="passwordConfirmText">Confirm your Password</string>
    <string name="passwordConfirmLabel">Confirm:</string>
    <string name="submitButtonText">Submit</string>
    <string name="emailLabel">Email:</string>
    <string name="emailText">Enter your email</string>
    <string name="passwordText">Enter your password</string>
    <string name="passwordLabel">Password:</string>
    <string name="locationLabel">Location:</string>
    <string name="LocationText">Enter centre location</string>
    <string name="register_bt_text">Register Staff</string>
    <string name="register_user_text">Register User</string>
    <string name="goodbye_text">Goodbye</string>
    <string name="home_bt_text">Home</string>
    <string name="view_users_text">Users In</string>
    <string name="view_out_users">Users Out</string>
    <string name="view_all_users">View all Users</string>
    <string name="logged_user_text">Currently Logged-in Users</string>
    <string name="staff_help_text">Staff Options</string>
    <string name="remove_user_text">Remove User</string>
    <string name="remove_staff_text">Remove Staff</string>
    <string name="remove_text">Enter Details to Remove User</string>
    <string name="sign_out_text">Sign Out all Users</string>
    <string name="username_enter_text">Enter your Username</string>
    <string name="staff_signin_text">Staff Sign In</string>
</resources>
