<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">


    <TextView
        android:text="@string/registerInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerInfo2"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/fNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/user_fname_id"
        android:layout_alignBottom="@+id/user_fname_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/sNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/user_sname_id"
        android:layout_alignBottom="@+id/user_sname_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/textView4"
        android:layout_alignBaseline="@+id/usernameID"
        android:layout_alignBottom="@+id/usernameID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/usernameID"
        android:layout_toStartOf="@+id/usernameID" />

    <TextView
        android:text="@string/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/passwordID"
        android:layout_alignBottom="@+id/passwordID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/submitButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitButtonID"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/passwordConfirmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/confirmPasswordID"
        android:layout_alignBottom="@+id/confirmPasswordID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameID"
        android:hint="@string/usernameText"
        android:layout_marginTop="33dp"
        android:textAlignment="center"
        android:layout_below="@+id/registerInfo2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordID"
        android:hint="@string/passwordText"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:layout_below="@+id/usernameID"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPasswordID"
        android:hint="@string/passwordConfirmText"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/passwordID"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/user_fname_id"
        android:hint="@string/fNameText"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:layout_below="@+id/passwordID"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="87dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/user_sname_id"
        android:singleLine="false"
        android:hint="@string/sNameText"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        android:layout_below="@+id/user_fname_id"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/user_loc_id"
        android:layout_alignBottom="@+id/user_loc_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/locationLabel"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/user_loc_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/user_sname_id"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/LocationText"
        android:textAlignment="center"
        android:inputType="textPersonName" />

</RelativeLayout>
