<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">


    <TextView
        android:id="@+id/registerInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/registerInfoText2"
        android:textSize="24sp" />

    <TextView
        android:text="@string/fNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:layout_marginTop="109dp"
        android:layout_below="@+id/registerInfo2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/sNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/user_sname_id"
        android:layout_alignBottom="@+id/user_sname_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/user_submit_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:text="@string/submitButtonText" />

    <EditText
        android:id="@+id/user_id_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userlabel_id"
        android:layout_alignBottom="@+id/userlabel_id"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/userid_text"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/user_fname_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:ems="10"
        android:hint="@string/fNameText2"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/user_sname_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/user_fname_id"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/sNameText2"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/user_loc_id"
        android:layout_alignBottom="@+id/user_loc_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/locationLabel"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/user_loc_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/user_sname_id"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/LocationText"
        android:textAlignment="center"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/userlabel_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="@string/userid_label"
        android:textSize="18sp"
        android:layout_above="@+id/user_fname_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



</RelativeLayout>
