<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7CD8D5">


    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:id="@+id/view_users_bt_id"
        android:text="@string/view_users_text"
        android:background="@color/myGreen"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/staff_help_tv"
        android:layout_alignRight="@+id/register_b_id"
        android:layout_alignEnd="@+id/register_b_id" />

    <Button
        android:id="@+id/user_out_bt_id"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@color/myRed"
        android:text="@string/view_out_users"
        android:layout_alignBaseline="@+id/view_users_bt_id"
        android:layout_alignBottom="@+id/view_users_bt_id"
        android:layout_alignLeft="@+id/register_user_bt_id"
        android:layout_alignStart="@+id/register_user_bt_id" />

    <Button
        android:id="@+id/all_user_bt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/view_all_users"
        android:layout_below="@+id/view_users_bt_id"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_b_id"
        android:text="@string/register_bt_text"
        android:layout_alignBaseline="@+id/register_user_bt_id"
        android:layout_alignBottom="@+id/register_user_bt_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/register_user_bt_id"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/register_user_text"
        android:layout_marginTop="73dp"
        android:layout_below="@+id/all_user_bt_id"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/staff_help_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staff_help_text"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/remove_user_b_id"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@color/myRed"
        android:layout_centerHorizontal="true"
        android:text="@string/remove_user_text"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/register_user_bt_id" />


</RelativeLayout>