<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">


    <EditText
        android:id="@+id/staff_username_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="66dp"
        android:hint="@string/username_enter_text"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:nextFocusDown="@+id/staff_pass_id"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordText"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/staff_pass_id"
        android:maxLength="15"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/staff_username_id" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:onClick="logIn"
        android:id="@+id/login_bt_id"
        android:layout_gravity="bottom"
        android:background="#F9BE02"
        android:layout_marginBottom="189dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/staff_signin_text"
        android:textSize="18sp" />


</RelativeLayout>